<resources>
    <string name="app_name">MenuProject</string>
    <string name="sms">SMS</string>
    <string name="phone">Phone</string>
    <string name="web">Web</string>
    <string name="map">Map</string>
    <string name="share">Share</string>
    <string name="new_activity">New Activity</string>
    <string name="my_name">Hello Prakash Shahi Thakuri</string>
    <string name="share_text">Share the Love</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="help">HELP</string>
</resources>
