<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
   >





    <Button
        android:id="@+id/sms"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms"
        android:onClick="sms"/>

    <Button
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_below="@id/sms"
        android:onClick="phone"/>

    <Button

        android:id="@+id/web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/web"
        android:layout_below="@id/phone"
        android:onClick="web"/>

    <Button
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map"
        android:layout_below="@id/web"
        android:onClick="map"/>

    <Button
android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:layout_below="@id/map"
        android:onClick="share"/>

    <Button
android:id="@+id/new_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_activity"
        android:layout_below="@id/share"
        android:onClick="newActivity"/>

</RelativeLayout>